--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    // 뷰바인딩 사용 설정
+    buildFeatures{
+        viewBinding = true
+    }
+
 }
 
 dependencies {
