--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Youtube player API
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:chromecast-sender:0.26'
+
+
     implementation "com.kakao.sdk:v2-user:2.9.0" // 카카오 로그인
 }
