--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation "com.kakao.sdk:v2-user:2.9.0" // 카카오 로그인
+
+    implementation 'com.google.android.gms:play-services-location:18.0.0' //gps
 }
