--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation "com.kakao.sdk:v2-user:2.9.0" // 카카오 로그인
 
     implementation 'com.google.android.gms:play-services-location:18.0.0' //gps
+
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'//유튜브 영상
 }
