--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Health_App">
-
+        <activity
+            android:name=".Top6"
+            android:exported="false" />
+        <activity
+            android:name=".Top5"
+            android:exported="false" />
+        <activity
+            android:name=".Top4"
+            android:exported="false" />
+        <activity
+            android:name=".Top3"
+            android:exported="false" />
+        <activity
+            android:name=".Top2"
+            android:exported="false" />
+        <activity
+            android:name=".Top1"
+            android:exported="false" />
+        <activity
+            android:name=".Top0"
+            android:exported="true" />
+        <activity
+            android:name=".CardViewTEST"
+            android:exported="true" />
+        <activity
+            android:name=".AerobicList"
+            android:exported="false" />
+        <activity
+            android:name=".TopList"
+            android:exported="true" />
+        <activity
+            android:name=".BottomList"
+            android:exported="true" />
         <activity
             android:name=".Diary"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".YoutubeTEST"
             android:exported="false" />
@@ -29,22 +61,18 @@
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".IntroActivity"
-            android:exported="true" >
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
         </activity>
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
