--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" /> <!-- gps 위치 권한 허용 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:name=".GlobalApplication"
@@ -15,6 +15,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Health_App">
+        <activity
+            android:name=".Top13"
+            android:exported="false" />
+        <activity
+            android:name=".Top12"
+            android:exported="false" />
+        <activity
+            android:name=".Top11"
+            android:exported="false" />
+        <activity
+            android:name=".Top10"
+            android:exported="false" />
+        <activity
+            android:name=".Top9"
+            android:exported="false" />
+        <activity
+            android:name=".Top8"
+            android:exported="false" />
+        <activity
+            android:name=".Top7"
+            android:exported="false" />
         <activity
             android:name=".Aerobic6"
             android:exported="false" />
@@ -78,7 +99,6 @@
         <activity
             android:name=".Top0"
             android:exported="true" />
-
         <activity
             android:name=".AerobicList"
             android:exported="false" />
@@ -90,13 +110,7 @@
             android:exported="true" />
         <activity
             android:name=".Diary"
-            android:exported="true" >
-
-
-
-
-        </activity>
-
+            android:exported="true" />
         <activity
             android:name=".Timer"
             android:exported="false" />
@@ -108,26 +122,19 @@
             android:exported="true" />
         <activity
             android:name=".IntroActivity"
-            android:exported="true" >
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
-
         </activity>
         <activity
             android:name=".PedometerActivity"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
             android:exported="true">
